--- a/app/page.module.css
+++ b/app/page.module.css
@@ -103,7 +103,18 @@
   filter: blur(45px);
   transform: translateZ(0);
 }
-
+.button{
+  text-decoration: none;
+  color: white;
+  background-color: #ffa500;
+  box-shadow: 0 8px 16px 0 rgba(255, 165, 0);
+  transition: 0.3s;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  padding: 12px 32px;
+  font-size: 22px;
+}
 .logo {
   position: relative;
 }
