--- a/app/page.module.css
+++ b/app/page.module.css
@@ -103,6 +103,19 @@
   filter: blur(45px);
   transform: translateZ(0);
 }
+.img{
+  text-decoration: none;
+  color: white;
+  background-color: #ffa500;
+  box-shadow: 0 8px 16px 0 rgba(255, 165, 0);
+  transition: 0.3s;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  padding: 12px 32px;
+  font-size: 22px;
+  border-radius: 20px;
+}
 .button{
   text-decoration: none;
   color: white;
@@ -114,9 +127,11 @@
   font-weight: bold;
   padding: 12px 32px;
   font-size: 22px;
+  border-radius: 20px;
 }
 .logo {
   position: relative;
+  border-radius: 40px;
 }
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
